example/k8s/1-name-space.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: my-namespace
#   labels:
#     istio-injection: enabled
# ---
apiVersion: v1
kind: Namespace
metadata:
  name: hypothesis
  labels:
    istio-injection: enabled
