example/k8s/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: my-namespace
  name: my-service
spec:
  selector:
    app: webapp-color
  ports:
    - name: http
      port: 80
      nodePort: 30076
  type: NodePort
